--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Halooo Dyaaaku
-                <span id="name">Sayaaang<3</span>
+                Halo Dyaaku
+                <span id="name">Sayang<3</span>
             </h1>
-            <p class="two" id="greetingText">Ido sayaangg banget sama kamuuuu</p>
+            <p class="two" id="greetingText">Ido sayang banget sama kamuu</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Halooo ayyy, selamat ulang tahun yaaa! Hari ini spesial banget karena tanggal ini kamu lahir di dunia ini dan ido jadi punya kesempatan buat kenal kamu. Ido bersyukur bangett punya kamu di hidup ido. Ayy itu nda cuma pacar, tapi juga sahabat terbaik aku. Ingat nda dulu pertama kali kita ketemu? ido ga nyangka kalau orang yang awalnya cuma teman mabar ini bisa jadi segitu pentingnya buat aku. Kita udah ngelewatin banyak hal bareng, baik yang seneng-seneng sampe yang bikin stres. Tapi, tiap momen sama kamu selalu bikin hidup ido lebih berwarna. dya selalu tau gimana caranya bikin ido ketawa :* mwaaaa, bahkan di hari-hari terburuk sekalipun. Semoga di ulang tahun kamu yang sekarang, semua harapan dan impian kamu bisa mulai tercapai satu per satu. Ido bakal selalu ada buat dukung kamu terus sayaaangg, apapun yang kamu pengen lakukan. Mari kita bikin lebih banyak kenangan manis dan seru di tahun-tahun ke depannya. Sekali lagi, selamat ulang tahun yaa, Sayangkuu. Semoga dihari ini penuh dengan kebahagiaan dan cinta. Ido sayang bangetttt sama kamu! Lovyuuuu sayaaaanggg!!!.
+                Halooo ayyy, selamat ulang tahun yaaa!. Ido bersyukur bangett punya kamu di hidup ido. Ingat nda dulu pertama kali kita ketemu? ido ga nyangka kalau orang yang awalnya cuma teman mabar ini bisa jadi segitu pentingnya buat aku. Kita udah ngelewatin banyak hal bareng, baik yang seneng-seneng sampe yang bikin stres. Tapi, tiap momen sama kamu selalu bikin hidup ido lebih berwarna. dya selalu tau gimana caranya bikin ido ketawa :* mwaaaa, bahkan di hari-hari terburuk sekalipun. Semoga di ulang tahun kamu yang sekarang, semua harapan dan impian kamu bisa mulai tercapai satu per satu. Ido bakal selalu ada buat dukung kamu terus sayang, apapun yang kamu pengen lakukan. Mari kita bikin lebih banyak kenangan manis dan seru di tahun-tahun ke depannya. Sekali lagi, selamat ulang tahun yaa, Sayangkuu. Semoga dihari ini penuh dengan kebahagiaan dan cinta. Ido sayang bangetttt sama kamu! Lovyuu sayangg!.
 
                 </p>
                 <p class="fake-btn">Send</p>
